Make header clickable (reset) and add loader sentence

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <h1>The FatCow icon set</h1>
+    <h1>
+      <a href="./">The FatCow Icon Set</a>
+    </h1>
     <form>
       <input name="search" />
       <input type="submit" />
     </form>
     <p id="resultsDiv"></p>
-    <div id="iconsDiv"></div>
+    <div id="iconsDiv">Loading all FatCow icons…</div>
   </body>
 </html>
