--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>
-      <a href="./">FatCow Icons v3.9.2</a>
+      <a href="./">FatCow Icons 3.9.2</a>
     </h1>
     <form>
       <input name="search" />
