Add live site to the README and GitHub link to the page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <input type="submit" />
     </form>
     <p id="resultsDiv"></p>
+    <a href="https://github.com/TomasHubelbauer/fatcow-icons">GitHub</a>
     <div id="iconsDiv">Loading all FatCow icons…</div>
   </body>
 </html>
