Make the promo a bit nicer

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
     <h1>
       <a href="./">FatCow Icons 3.9.2</a>
     </h1>
+    <p>
+      Made by <a href="https://hubelbauer.net" target="_blank"><img height="16" width="16" src="https://hubelbauer.net/favicon.ico" /> Tomas Hubelbauer</a>
+      <br />
+      Source code is available <a href="https://github.com/TomasHubelbauer/fatcow-icons" target="_blank">on GitHub</a>
+    </p>
     <form>
       <input name="search" />
-      <input type="submit" />
+      <input type="submit" value="Search" />
     </form>
     <p id="resultsDiv"></p>
-    <a href="https://github.com/TomasHubelbauer/fatcow-icons">GitHub</a>
     <div id="iconsDiv">Loading all FatCow icons…</div>
   </body>
 </html>
