Break up the promo syntax a little bit for clarity

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
       <a href="./">FatCow Icons 3.9.2</a>
     </h1>
     <p>
-      Made by <a href="https://hubelbauer.net" target="_blank"><img height="16" width="16" src="https://hubelbauer.net/favicon.ico" /> Tomas Hubelbauer</a>
+      Made by
+      <a href="https://hubelbauer.net" target="_blank">
+        <img height="16" width="16" src="https://hubelbauer.net/favicon.ico" />
+        Tomas Hubelbauer
+      </a>
       <br />
-      Source code is available <a href="https://github.com/TomasHubelbauer/fatcow-icons" target="_blank">on GitHub</a>
+      Source code is available
+      <a href="https://github.com/TomasHubelbauer/fatcow-icons" target="_blank">on GitHub</a>
     </p>
     <form>
       <input name="search" />
