Integrate the WIP spike to the main app

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>FatCow Icons 3.9.2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="index.css" />
+    <script src="UZIP.js"></script>
     <script src="index.js"></script>
   </head>
   <body>
@@ -27,5 +28,6 @@
     </form>
     <p id="resultsDiv"></p>
     <div id="iconsDiv">Loading all FatCow icons…</div>
+    <a id="downloadA"></a>
   </body>
 </html>
