Add support for deep-linking to a specific icon

--- a/icon.html
+++ b/icon.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="index.css" />
     <script src="UZIP.js"></script>
-    <script src="index.js" type="module"></script>
+    <script src="icon.js" type="module"></script>
   </head>
   <body>
     <h1>
@@ -22,12 +22,12 @@
       Source code is available
       <a href="https://github.com/TomasHubelbauer/fatcow-icons" target="_blank">on GitHub</a>
     </p>
-    <form>
-      <input name="search" />
-      <input type="submit" value="Search" />
-    </form>
-    <p id="resultsDiv"></p>
-    <div id="iconsDiv">Loading all FatCow icons…</div>
-    <a id="downloadA"></a>
+    <p id="statusP"></p>
+    <div>
+      <img id="icon32Img" />
+    </div>
+    <div>
+      <img id="icon16Img" />
+    </div>
   </body>
 </html>
